// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`drawRemainder last day of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M419.52948054571414,19.874983095421403L149.83195733775506,7.098208248364787Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M419.52948054571414,19.874983095421403L149.83195733775506,7.098208248364787Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder last day of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M-18.06933786190277,419.6111283429366L-6.453334950679561,149.86111726533449Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-18.06933786190277,419.6111283429366L-6.453334950679561,149.86111726533449Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder last day of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M-419.68500472066705,-16.263357974713102L-149.88750168595251,-5.808342133826108Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-419.68500472066705,-16.263357974713102L-149.88750168595251,-5.808342133826108Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder last day of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M14.457076881553256,-419.751108310676L5.163241743411877,-149.91111011095572Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M14.457076881553256,-419.751108310676L5.163241743411877,-149.91111011095572Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M28.897019256974406,-419.004728228766A420,420,0,0,1,36.10521546972754,-418.4452334725353L12.894719810616976,-149.44472624019116A150,150,0,0,0,10.320364020348002,-149.64454579598785Z" stroke="none"></path>
                <path d="M36.10521546972754,-418.4452334725353A420,420,0,0,1,43.30271292792262,-417.76174436283884L15.465254617115223,-149.20062298672815A150,150,0,0,0,12.894719810616976,-149.44472624019116Z" stroke="none"></path>
                <path d="M43.30271292792262,-417.76174436283884A420,420,0,0,1,50.48737885772817,-416.95446343225086L18.031206734902916,-148.91230836866103A150,150,0,0,0,15.465254617115223,-149.20062298672815Z" stroke="none"></path>
                <path d="M50.48737885772817,-416.95446343225086A420,420,0,0,1,57.65708428757121,-416.0236298955336L20.591815816989715,-148.57986781983342A150,150,0,0,0,18.031206734902916,-148.91230836866103Z" stroke="none"></path>
                <path d="M57.65708428757121,-416.0236298955336A420,420,0,0,1,64.80970467899814,-414.96951957875297L23.146323099642192,-148.20339984955464A150,150,0,0,0,20.591815816989715,-148.57986781983342Z" stroke="none"></path>
                <path d="M79.05521813416256,-412.4927544645602A420,420,0,0,1,86.1438899448201,-411.07083358610436L30.765674980292893,-146.81101199503726A150,150,0,0,0,28.234006476486627,-147.3188408802001Z" stroke="none"></path>
                <path d="M86.1438899448201,-411.07083358610436A420,420,0,0,1,93.2070354617495,-409.52710354802184L33.288226950624825,-146.25967983857922A150,150,0,0,0,30.765674980292893,-146.81101199503726Z" stroke="none"></path>
                <path d="M93.2070354617495,-409.52710354802184A420,420,0,0,1,100.2425617224991,-407.86202179083915L35.800914900892536,-145.66500778244256A150,150,0,0,0,33.288226950624825,-146.25967983857922Z" stroke="none"></path>
                <path d="M100.2425617224991,-407.86202179083915A420,420,0,0,1,107.24838394879856,-406.07608171421657L38.302994267428055,-145.0271720407916A150,150,0,0,0,35.800914900892536,-145.66500778244256Z" stroke="none"></path>
                <path d="M107.24838394879856,-406.07608171421657A420,420,0,0,1,114.22242616432429,-404.16981253074243L40.79372363011582,-144.3463616181223A150,150,0,0,0,38.302994267428055,-145.0271720407916Z" stroke="none"></path>
                <path d="M128.0669143556414,-399.99858180676694A420,420,0,0,1,134.93325791079312,-397.7348562919516L48.19044925385468,-142.04816296141126A150,150,0,0,0,45.73818369844335,-142.85663635955962Z" stroke="none"></path>
                <path d="M134.93325791079312,-397.7348562919516A420,420,0,0,1,141.7596178295276,-395.3532733553958L50.62843493911699,-141.19759762692706A150,150,0,0,0,48.19044925385468,-142.04816296141126Z" stroke="none"></path>
                <path d="M141.7596178295276,-395.3532733553958A420,420,0,0,1,148.54397131407603,-392.85453871152225L53.051418326455725,-140.30519239697225A150,150,0,0,0,50.62843493911699,-141.19759762692706Z" stroke="none"></path>
                <path d="M148.54397131407603,-392.85453871152225A420,420,0,0,1,155.28430801408274,-390.2393927893332L55.45868143360098,-139.37121171047613A150,150,0,0,0,53.051418326455725,-140.30519239697225Z" stroke="none"></path>
                <path d="M155.28430801408274,-390.2393927893332A420,420,0,0,1,161.97863062231505,-387.5086105130047L57.849510936541094,-138.39593232607314A150,150,0,0,0,55.45868143360098,-139.37121171047613Z" stroke="none"></path>
                <path d="M175.22131309717307,-381.7034076825912A420,420,0,0,1,181.76574887118113,-378.63070733539126L64.9163388825647,-135.2252526197826A150,150,0,0,0,62.57904039184752,-136.32264560092545Z" stroke="none"></path>
                <path d="M181.76574887118113,-378.63070733539126A420,420,0,0,1,188.25632353097245,-375.4458105380879L67.23440126106159,-134.08778947788855A150,150,0,0,0,64.9163388825647,-135.2252526197826Z" stroke="none"></path>
                <path d="M188.25632353097245,-375.4458105380879A420,420,0,0,1,194.69111377919745,-372.1496610443379L69.53254063542767,-132.91059323012067A150,150,0,0,0,67.23440126106159,-134.08778947788855Z" stroke="none"></path>
                <path d="M194.69111377919745,-372.1496610443379A420,420,0,0,1,201.06821284863116,-368.74323557437305L71.81007601736827,-131.69401270513322A150,150,0,0,0,69.53254063542767,-132.91059323012067Z" stroke="none"></path>
                <path d="M201.06821284863116,-368.74323557437305A420,420,0,0,1,207.38573106719045,-365.2275435255766L74.06633252399659,-130.43840840199164A150,150,0,0,0,71.81007601736827,-131.69401270513322Z" stroke="none"></path>
                <path d="M219.83455509353112,-357.8725588625499A420,420,0,0,1,225.9621720460859,-354.0354456890087L80.70077573074497,-126.4412306032174A150,150,0,0,0,78.51234110483254,-127.8116281651964Z" stroke="none"></path>
                <path d="M225.9621720460859,-354.0354456890087A420,420,0,0,1,232.02283153040028,-350.0934241721994L82.86529697514295,-125.03336577578548A150,150,0,0,0,80.70077573074497,-126.4412306032174Z" stroke="none"></path>
                <path d="M232.02283153040028,-350.0934241721994A420,420,0,0,1,238.0147376422694,-346.0476624181728L85.00526344366764,-123.58845086363314A150,150,0,0,0,82.86529697514295,-125.03336577578548Z" stroke="none"></path>
                <path d="M238.0147376422694,-346.0476624181728A420,420,0,0,1,243.9361148505964,-341.89935927345147L87.12004101807014,-122.10691402623267A150,150,0,0,0,85.00526344366764,-123.58845086363314Z" stroke="none"></path>
                <path d="M243.9361148505964,-341.89935927345147A420,420,0,0,1,249.78520852352062,-337.64974396978494L89.20900304411451,-120.5891942749232A150,150,0,0,0,87.12004101807014,-122.10691402623267Z" stroke="none"></path>
                <path d="M261.25963434516433,-328.85164354436637A420,420,0,0,1,266.8815663738746,-324.305765489649L95.31484513352663,-115.82348767487464A150,150,0,0,0,93.30701226613013,-117.44701555155943Z" stroke="none"></path>
                <path d="M266.8815663738746,-324.305765489649A420,420,0,0,1,272.4244156346922,-319.66378863752533L97.29443415524722,-114.16563879911618A150,150,0,0,0,95.31484513352663,-115.82348767487464Z" stroke="none"></path>
                <path d="M272.4244156346922,-319.66378863752533A420,420,0,0,1,277.8865396617569,-314.9270885059188L99.24519273634175,-112.47396018068528A150,150,0,0,0,97.29443415524722,-114.16563879911618Z" stroke="none"></path>
                <path d="M277.8865396617569,-314.9270885059188A420,420,0,0,1,283.2663199098371,-310.09706868130473L101.16654282494181,-110.74895310046598A150,150,0,0,0,99.24519273634175,-112.47396018068528Z" stroke="none"></path>
                <path d="M283.2663199098371,-310.09706868130473A420,420,0,0,1,288.56216223394017,-305.17516040279753L103.05791508355006,-108.99112871528483A150,150,0,0,0,101.16654282494181,-110.74895310046598Z" stroke="none"></path>
                <path d="M298.8957813583454,-295.0615391510459A420,420,0,0,1,303.9304960842832,-289.8728230620482L108.54660574438685,-103.52600823644579A150,150,0,0,0,106.74849334226622,-105.37912112537354Z" stroke="none"></path>
                <path d="M303.9304960842832,-289.8728230620482A420,420,0,0,1,308.87514964487394,-284.59821139960934L110.31255344459784,-101.64221835700334A150,150,0,0,0,108.54660574438685,-103.52600823644579Z" stroke="none"></path>
                <path d="M308.87514964487394,-284.59821139960934A420,420,0,0,1,313.7282768325532,-279.2392671450003L112.0458131544833,-99.72830969464297A150,150,0,0,0,110.31255344459784,-101.64221835700334Z" stroke="none"></path>
                <path d="M313.7282768325532,-279.2392671450003A420,420,0,0,1,318.48843956099626,-273.7975782690593L113.74587127178438,-97.7848493818069A150,150,0,0,0,112.0458131544833,-99.72830969464297Z" stroke="none"></path>
                <path d="M318.48843956099626,-273.7975782690593A420,420,0,0,1,323.1542272912539,-268.27475726164135L115.41222403259069,-95.81241330772906A150,150,0,0,0,113.74587127178438,-97.7848493818069Z" stroke="none"></path>
                <path d="M332.19717583784643,-256.9922885328642A420,420,0,0,1,336.5716570333642,-251.23598405048483L120.2041632262015,-89.72713716088744A150,150,0,0,0,118.64184851351658,-91.78296019030866Z" stroke="none"></path>
                <path d="M336.5716570333642,-251.23598405048483A420,420,0,0,1,340.8464047830916,-245.40523292391475L121.73085885110414,-87.64472604425526A150,150,0,0,0,120.2041632262015,-89.72713716088744Z" stroke="none"></path>
                <path d="M340.8464047830916,-245.40523292391475A420,420,0,0,1,345.02015238701404,-239.50176293055057L123.22148299536215,-85.53634390376806A150,150,0,0,0,121.73085885110414,-87.64472604425526Z" stroke="none"></path>
                <path d="M345.02015238701404,-239.50176293055057A420,420,0,0,1,349.0916630736393,-233.5273233959587L124.67559395487119,-83.40261549855667A150,150,0,0,0,123.22148299536215,-85.53634390376806Z" stroke="none"></path>
                <path d="M349.0916630736393,-233.5273233959587A420,420,0,0,1,353.05973036648084,-227.48368467551214L126.09276084517172,-81.24417309839718A150,150,0,0,0,124.67559395487119,-83.40261549855667Z" stroke="none"></path>
                <path d="M360.6808624758373,-215.19599309393791A420,420,0,0,1,364.3316689864307,-208.95558134101586L130.11845320943954,-74.62699333607709A150,150,0,0,0,128.81459374137046,-76.85571181926355Z" stroke="none"></path>
                <path d="M364.3316689864307,-208.95558134101586A420,420,0,0,1,367.87451616058206,-202.65325153971173L131.38375577163646,-72.37616126418276A150,150,0,0,0,130.11845320943954,-74.62699333607709Z" stroke="none"></path>
                <path d="M367.87451616058206,-202.65325153971173A420,420,0,0,1,371.30835417621273,-196.29087120636092L132.61012649150453,-70.10388257370033A150,150,0,0,0,131.38375577163646,-72.37616126418276Z" stroke="none"></path>
                <path d="M371.30835417621273,-196.29087120636092A420,420,0,0,1,374.63216551301036,-189.8703256515678L133.79720196893228,-67.81083058984565A150,150,0,0,0,132.61012649150453,-70.10388257370033Z" stroke="none"></path>
                <path d="M374.63216551301036,-189.8703256515678A420,420,0,0,1,377.8449652539422,-183.39351742154687L134.9446304478365,-65.49768479340959A150,150,0,0,0,133.79720196893228,-67.81083058984565Z" stroke="none"></path>
                <path d="M383.93375503784017,-170.27880591119887A420,420,0,0,1,386.80794084098653,-163.64478880293092L138.1456931574952,-58.44456742961818A150,150,0,0,0,137.11919822780007,-60.813859253999595Z" stroke="none"></path>
                <path d="M386.80794084098653,-163.64478880293092A420,420,0,0,1,389.5675071032626,-156.96228021199698L139.1312525368795,-56.05795721857035A150,150,0,0,0,138.1456931574952,-58.44456742961818Z" stroke="none"></path>
                <path d="M389.5675071032626,-156.96228021199698A420,420,0,0,1,392.21163610562854,-150.23326030991277L140.07558432343876,-53.654735824968846A150,150,0,0,0,139.1312525368795,-56.05795721857035Z" stroke="none"></path>
                <path d="M392.21163610562854,-150.23326030991277A420,420,0,0,1,394.73954433559607,-143.45972305049935L140.9784086912843,-51.235615375178334A150,150,0,0,0,140.07558432343876,-53.654735824968846Z" stroke="none"></path>
                <path d="M394.73954433559607,-143.45972305049935A420,420,0,0,1,397.15048271939986,-136.6436755790317L141.8394581140714,-48.80131270679704A150,150,0,0,0,140.9784086912843,-51.235615375178334Z" stroke="none"></path>
                <path d="M401.61862716860037,-122.89214096600638A420,420,0,0,1,403.6745092263663,-115.96072870093698L144.16946758084512,-41.41454596462035A150,150,0,0,0,143.43522398878585,-43.89005034500228Z" stroke="none"></path>
                <path d="M403.6745092263663,-115.96072870093698A420,420,0,0,1,405.61077381503907,-108.99495476931592L144.86099064822824,-38.92676956046997A150,150,0,0,0,144.16946758084512,-41.41454596462035Z" stroke="none"></path>
                <path d="M405.61077381503907,-108.99495476931592A420,420,0,0,1,407.42684717763296,-101.99688328029302L145.50958827772607,-36.427458314390364A150,150,0,0,0,144.86099064822824,-38.92676956046997Z" stroke="none"></path>
                <path d="M407.42684717763296,-101.99688328029302A420,420,0,0,1,409.1221911724166,-94.96858791348106L146.11506827586308,-33.91735282624323A150,150,0,0,0,145.50958827772607,-36.427458314390364Z" stroke="none"></path>
                <path d="M409.1221911724166,-94.96858791348106A420,420,0,0,1,410.6963034323759,-87.91215130448042L146.67725122584852,-31.39719689445729A150,150,0,0,0,146.11506827586308,-33.91735282624323Z" stroke="none"></path>
                <path d="M413.47900303587875,-73.72322597699983A420,420,0,0,1,414.6867658054743,-66.59494174331648L148.10241635909796,-23.783907765470172A150,150,0,0,0,147.67107251281382,-26.329723563214223Z" stroke="none"></path>
                <path d="M414.6867658054743,-66.59494174331648A420,420,0,0,1,415.7716479366883,-59.44692399115813L148.48987426310296,-21.231044282556475A150,150,0,0,0,148.10241635909796,-23.783907765470172Z" stroke="none"></path>
                <path d="M415.7716479366883,-59.44692399115813A420,420,0,0,1,416.73332795553154,-52.2812908324515L148.83333141268983,-18.671889583018395A150,150,0,0,0,148.48987426310296,-21.231044282556475Z" stroke="none"></path>
                <path d="M416.73332795553154,-52.2812908324515A420,420,0,0,1,417.5715208954598,-45.100165598948465L149.13268603409279,-16.107201999624454A150,150,0,0,0,148.83333141268983,-18.671889583018395Z" stroke="none"></path>
                <path d="M417.5715208954598,-45.100165598948465A420,420,0,0,1,418.2859783818152,-37.90567621303726L149.38784942207687,-13.537741504656164A150,150,0,0,0,149.13268603409279,-16.107201999624454Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M21.680260233766585,-419.4400628411599A420,420,0,0,1,418.8764887054253,-30.699954557192548L149.59874596622333,-10.964269484711624A150,150,0,0,0,7.742950083488066,-149.8000224432714Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M21.680260233766585,-419.4400628411599A420,420,0,0,1,418.8764887054253,-30.699954557192548L149.59874596622333,-10.964269484711624A150,150,0,0,0,7.742950083488066,-149.8000224432714Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M419.1252075634647,27.09354876871284A420,420,0,0,1,418.5967387367515,34.30408603877744L149.49883526312553,12.251459299563372A150,150,0,0,0,149.68757412980884,9.676267417397444Z" stroke="none"></path>
                <path d="M418.5967387367515,34.30408603877744A420,420,0,0,1,417.94423066229297,41.50445826780602L149.26579666510463,14.823020809930723A150,150,0,0,0,149.49883526312553,12.251459299563372Z" stroke="none"></path>
                <path d="M417.94423066229297,41.50445826780602A420,420,0,0,1,417.167876692314,48.692531830110205L148.98852739011215,17.390189939325072A150,150,0,0,0,149.26579666510463,14.823020809930723Z" stroke="none"></path>
                <path d="M417.167876692314,48.692531830110205A420,420,0,0,1,416.267906877251,55.8661767443623L148.6671095990182,19.952205980129392A150,150,0,0,0,148.98852739011215,17.390189939325072Z" stroke="none"></path>
                <path d="M416.267906877251,55.8661767443623A420,420,0,0,1,415.24458789758296,63.023267304754114L148.30163853485107,22.508309751697897A150,150,0,0,0,148.6671095990182,19.952205980129392Z" stroke="none"></path>
                <path d="M412.8291518315925,77.27930769622564A420,420,0,0,1,411.4377504911058,84.37403315486684L146.94205374682352,30.1335832695953A150,150,0,0,0,147.43898279699732,27.599752748652016Z" stroke="none"></path>
                <path d="M411.4377504911058,84.37403315486684A420,420,0,0,1,409.9244312655947,91.44375676654337L146.40158259485526,32.658484559479774A150,150,0,0,0,146.94205374682352,30.1335832695953Z" stroke="none"></path>
                <path d="M409.9244312655947,91.44375676654337A420,420,0,0,1,408.28964258420575,98.48638361957207L145.81772949435918,35.17370843556145A150,150,0,0,0,146.40158259485526,32.658484559479774Z" stroke="none"></path>
                <path d="M408.28964258420575,98.48638361957207A420,420,0,0,1,406.53386887010697,105.49982683162406L145.19066745360962,37.678509582722874A150,150,0,0,0,145.81772949435918,35.17370843556145Z" stroke="none"></path>
                <path d="M406.53386887010697,105.49982683162406A420,420,0,0,1,404.6576303969425,112.48200816811318L144.52058228462232,40.17214577432614A150,150,0,0,0,145.19066745360962,37.678509582722874Z" stroke="none"></path>
                <path d="M400.54601858478713,126.3443192069804A420,420,0,0,1,398.311863605112,133.2203412074245L142.25423700182571,47.57869328836589A150,150,0,0,0,143.05214949456683,45.12297114535014Z" stroke="none"></path>
                <path d="M398.311863605112,133.2203412074245A420,420,0,0,1,395.9596802239767,140.05688714563848L141.4141715085631,50.02031683772803A150,150,0,0,0,142.25423700182571,47.57869328836589Z" stroke="none"></path>
                <path d="M395.9596802239767,140.05688714563848A420,420,0,0,1,393.4901654440812,146.85193120551597L140.53220194431472,52.44711828768427A150,150,0,0,0,141.4141715085631,50.02031683772803Z" stroke="none"></path>
                <path d="M393.4901654440812,146.85193120551597A420,420,0,0,1,390.90405103595134,153.6034598688531L139.6085896556969,54.858378524590385A150,150,0,0,0,140.53220194431472,52.44711828768427Z" stroke="none"></path>
                <path d="M390.90405103595134,153.6034598688531A420,420,0,0,1,388.2021033210992,160.3094725119968L138.64360832896398,57.25338303999885A150,150,0,0,0,139.6085896556969,54.858378524590385Z" stroke="none"></path>
                <path d="M382.4539446395708,173.5770152688198A420,420,0,0,1,379.4094369763675,180.13461392324308L135.50337034870267,64.33379068687253A150,150,0,0,0,136.59069451413242,61.991791167435636Z" stroke="none"></path>
                <path d="M379.4094369763675,180.13461392324308A420,420,0,0,1,376.2525021086617,186.63883480393758L134.37589361023632,66.65672671569199A150,150,0,0,0,135.50337034870267,64.33379068687253Z" stroke="none"></path>
                <path d="M376.2525021086617,186.63883480393758A420,420,0,0,1,372.98407550438714,193.0877505698837L133.20859839442397,68.9599109178156A150,150,0,0,0,134.37589361023632,66.65672671569199Z" stroke="none"></path>
                <path d="M372.98407550438714,193.0877505698837A420,420,0,0,1,369.605125668885,199.479450268161L132.00183059603037,71.2426608100575A150,150,0,0,0,133.20859839442397,68.9599109178156Z" stroke="none"></path>
                <path d="M369.605125668885,199.479450268161A420,420,0,0,1,366.11665385791514,205.81203990020487L130.75594780639827,73.50429996435888A150,150,0,0,0,132.00183059603037,71.2426608100575Z" stroke="none"></path>
                <path d="M358.8153112949273,218.2924011053165A420,420,0,0,1,355.00460408828656,224.43647447801106L126.78735860295949,80.15588374214681A150,150,0,0,0,128.14832546247405,77.96157182332732Z" stroke="none"></path>
                <path d="M355.00460408828656,224.43647447801106A420,420,0,0,1,351.08870135582754,230.51404247958197L125.38882191279555,82.32644374270784A150,150,0,0,0,126.78735860295949,80.15588374214681Z" stroke="none"></path>
                <path d="M351.08870135582754,230.51404247958197A420,420,0,0,1,347.068763464042,236.52330419546584L123.95312980858643,84.4726086412378A150,150,0,0,0,125.38882191279555,82.32644374270784Z" stroke="none"></path>
                <path d="M347.068763464042,236.52330419546584A420,420,0,0,1,342.94598160728475,242.46247895172544L122.48070771688741,86.59374248275908A150,150,0,0,0,123.95312980858643,84.4726086412378Z" stroke="none"></path>
                <path d="M342.94598160728475,242.46247895172544A420,420,0,0,1,338.72157745479683,248.32980684270282L120.97199194814172,88.68921672953672A150,150,0,0,0,122.48070771688741,86.59374248275908Z" stroke="none"></path>
                <path d="M329.9729391330601,259.8419893702513A420,420,0,0,1,325.4512973741571,265.48343269868644L116.2326062050561,94.81551167810231A150,150,0,0,0,117.84747826180718,92.80071048937548Z" stroke="none"></path>
                <path d="M325.4512973741571,265.48343269868644A420,420,0,0,1,320.8332173720279,271.0462075564111L114.5832919185814,96.80221698443253A150,150,0,0,0,116.2326062050561,94.81551167810231Z" stroke="none"></path>
                <path d="M320.8332173720279,271.0462075564111A420,420,0,0,1,316.1200675634435,276.5286655731805L112.90002412980127,98.76023770470732A150,150,0,0,0,114.5832919185814,96.80221698443253Z" stroke="none"></path>
                <path d="M316.1200675634435,276.5286655731805A420,420,0,0,1,311.31324455641027,281.92918217836313L111.18330162728938,100.68899363512969A150,150,0,0,0,112.90002412980127,98.76023770470732Z" stroke="none"></path>
                <path d="M311.31324455641027,281.92918217836313A420,420,0,0,1,306.41417271632486,287.2461570823363L109.43363311297317,102.58791324369155A150,150,0,0,0,111.18330162728938,100.68899363512969Z" stroke="none"></path>
                <path d="M296.3451162450147,297.623204871073A420,420,0,0,1,291.1781152925306,302.68020281262164L103.99218403304664,108.10007243307915A150,150,0,0,0,105.83754151607668,106.29400173966894Z" stroke="none"></path>
                <path d="M291.1781152925306,302.68020281262164A420,420,0,0,1,285.92483198034694,307.64751007770303L102.11601142155247,109.8741107420368A150,150,0,0,0,103.99218403304664,108.10007243307915Z" stroke="none"></path>
                <path d="M285.92483198034694,307.64751007770303A420,420,0,0,1,280.58682296968414,312.5236547459713L100.20957963203006,111.61559098070406A150,150,0,0,0,102.11601142155247,109.8741107420368Z" stroke="none"></path>
                <path d="M280.58682296968414,312.5236547459713A420,420,0,0,1,275.1656700278158,317.3071919105257L98.27345358136277,113.32399711090204A150,150,0,0,0,100.20957963203006,111.61559098070406Z" stroke="none"></path>
                <path d="M275.1656700278158,317.3071919105257A420,420,0,0,1,269.66297955935676,321.99670410606683L96.30820698548456,114.99882289502386A150,150,0,0,0,98.27345358136277,113.32399711090204Z" stroke="none"></path>
                <path d="M258.41953198459777,331.0881234488206A420,420,0,0,1,252.68210655446757,335.48733661227317L90.24360948373842,119.8169059329547A150,150,0,0,0,92.2926899944992,118.24575837457878Z" stroke="none"></path>
                <path d="M252.68210655446757,335.48733661227317A420,420,0,0,1,246.8698059628387,339.78713763747794L88.16778784387097,121.35254915624212A150,150,0,0,0,90.24360948373842,119.8169059329547Z" stroke="none"></path>
                <path d="M246.8698059628387,339.78713763747794A420,420,0,0,1,240.98435251981647,343.9862524005935L86.06584018564874,122.85223300021197A150,150,0,0,0,88.16778784387097,121.35254915624212Z" stroke="none"></path>
                <path d="M240.98435251981647,343.9862524005935A420,420,0,0,1,235.02749021227427,348.0834366132915L83.93838936152652,124.31551307617555A150,150,0,0,0,86.06584018564874,122.85223300021197Z" stroke="none"></path>
                <path d="M235.02749021227427,348.0834366132915A420,420,0,0,1,229.00098418707356,352.07747619146517L81.78606578109769,125.74195578266612A150,150,0,0,0,83.93838936152652,124.31551307617555Z" stroke="none"></path>
                <path d="M216.7462042266582,359.7514182784215A420,420,0,0,1,210.52156164722578,363.4290468325466L75.18627201686635,129.7960881544809A150,150,0,0,0,77.40935865237792,128.48264938515055Z" stroke="none"></path>
                <path d="M210.52156164722578,363.4290468325466A420,420,0,0,1,204.23453698564995,366.9989835166539L72.94090606630355,131.0710655416621A150,150,0,0,0,75.18627201686635,129.7960881544809Z" stroke="none"></path>
                <path d="M204.23453698564995,366.9989835166539A420,420,0,0,1,197.88699322302293,370.4601704814585L70.67392615107961,132.30720374337804A150,150,0,0,0,72.94090606630355,131.0710655416621Z" stroke="none"></path>
                <path d="M197.88699322302293,370.4601704814585A420,420,0,0,1,191.48081127355266,373.8115821025642L68.38600402626881,133.5041364652015A150,150,0,0,0,70.67392615107961,132.30720374337804Z" stroke="none"></path>
                <path d="M191.48081127355266,373.8115821025642A420,420,0,0,1,185.01788942720788,377.05222528437815L66.07781765257424,134.66150903013505A150,150,0,0,0,68.38600402626881,133.5041364652015Z" stroke="none"></path>
                <path d="M171.9295027025611,383.1973983477054A420,420,0,0,1,165.30791619571616,386.10010728181635L59.03854149847006,137.89289545779155A150,150,0,0,0,61.403393822343254,136.85621369560909Z" stroke="none"></path>
                <path d="M165.30791619571616,386.10010728181635A420,420,0,0,1,158.6373453856652,388.8884064214169L56.656194780594724,138.88871657907748A150,150,0,0,0,59.03854149847006,137.89289545779155Z" stroke="none"></path>
                <path d="M158.6373453856652,388.8884064214169A420,420,0,0,1,151.9197669065024,391.56146953329556L54.25705960946514,139.843381976177A150,150,0,0,0,56.656194780594724,138.88871657907748Z" stroke="none"></path>
                <path d="M151.9197669065024,391.56146953329556A420,420,0,0,1,145.15717132170803,394.1185045311629L51.841846900610015,140.75660876112963A150,150,0,0,0,54.25705960946514,139.843381976177Z" stroke="none"></path>
                <path d="M145.15717132170803,394.1185045311629A420,420,0,0,1,138.35156253430273,396.5587537103637L49.41127233367955,141.6281263251299A150,150,0,0,0,51.841846900610015,140.75660876112963Z" stroke="none"></path>
                <path d="M124.61938409486591,401.08603703920716A420,420,0,0,1,117.69688358367083,403.1717296570927L42.03460127988244,143.98990344896168A150,150,0,0,0,44.506922891023535,143.2450132282883Z" stroke="none"></path>
                <path d="M117.69688358367083,403.1717296570927A420,420,0,0,1,110.73950694576313,405.13795379032223L39.549823909201116,144.69212635368652A150,150,0,0,0,42.03460127988244,143.98990344896168Z" stroke="none"></path>
                <path d="M110.73950694576313,405.13795379032223A420,420,0,0,1,103.74931580199308,406.98412680425054L37.053327072140384,145.3514738586609A150,150,0,0,0,39.549823909201116,144.69212635368652Z" stroke="none"></path>
                <path d="M103.74931580199308,406.98412680425054A420,420,0,0,1,96.72838149685711,408.70970163797L34.54585053459182,145.9677505849893A150,150,0,0,0,37.053327072140384,145.3514738586609Z" stroke="none"></path>
                <path d="M96.72838149685711,408.70970163797A420,420,0,0,1,89.67878448471434,410.31416696641634L32.02813731596941,146.54077391657725A150,150,0,0,0,34.54585053459182,145.9677505849893Z" stroke="none"></path>
                <path d="M75.50196600473618,413.1579033849161A420,420,0,0,1,68.37894543417717,414.39633181449597L24.42105194077756,147.99868993374855A150,150,0,0,0,26.96498785883435,147.55639406604146Z" stroke="none"></path>
                <path d="M68.37894543417717,414.39633181449597A420,420,0,0,1,61.235662706347334,415.5119656675539L21.86987953798119,148.39713059555496A150,150,0,0,0,24.42105194077756,147.99868993374855Z" stroke="none"></path>
                <path d="M61.235662706347334,415.5119656675539A420,420,0,0,1,54.07423453008395,416.5044743577018L19.312226617887124,148.7515979848935A150,150,0,0,0,21.86987953798119,148.39713059555496Z" stroke="none"></path>
                <path d="M54.07423453008395,416.5044743577018A420,420,0,0,1,46.89678299111174,417.37356378319475L16.748851068254194,149.0619870654267A150,150,0,0,0,19.312226617887124,148.7515979848935Z" stroke="none"></path>
                <path d="M46.89678299111174,417.37356378319475A420,420,0,0,1,39.70543492322379,418.1189764140796L14.180512472579926,149.32820586217127A150,150,0,0,0,16.748851068254194,149.0619870654267Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M419.52948054571414,19.874983095421403A420,420,0,0,1,32.50232127805444,418.74049136850635L11.607971885019444,149.55017548875227A150,150,0,0,0,149.83195733775506,7.098208248364787Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M419.52948054571414,19.874983095421403A420,420,0,0,1,32.50232127805444,418.74049136850635L11.607971885019444,149.55017548875227A150,150,0,0,0,149.83195733775506,7.098208248364787Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M-25.289576493632993,419.2379244781806A420,420,0,0,1,-32.50232127805439,418.74049136850635L-11.607971885019424,149.55017548875227A150,150,0,0,0,-9.031991604868926,149.7278301707788Z" stroke="none"></path>
                <path d="M-32.50232127805439,418.74049136850635A420,420,0,0,1,-39.70543492322374,418.1189764140796L-14.180512472579908,149.32820586217127A150,150,0,0,0,-11.607971885019424,149.55017548875227Z" stroke="none"></path>
                <path d="M-39.70543492322374,418.1189764140796A420,420,0,0,1,-46.896782991111685,417.3735637831948L-16.748851068254172,149.06198706542673A150,150,0,0,0,-14.180512472579908,149.32820586217127Z" stroke="none"></path>
                <path d="M-46.896782991111685,417.3735637831948A420,420,0,0,1,-54.0742345300839,416.5044743577018L-19.312226617887106,148.7515979848935A150,150,0,0,0,-16.748851068254172,149.06198706542673Z" stroke="none"></path>
                <path d="M-54.0742345300839,416.5044743577018A420,420,0,0,1,-61.23566270634728,415.5119656675539L-21.86987953798117,148.39713059555496A150,150,0,0,0,-19.312226617887106,148.7515979848935Z" stroke="none"></path>
                <path d="M-75.50196600473612,413.15790338491615A420,420,0,0,1,-82.60261371330205,411.7970473518855L-29.500933469036447,147.0703740542448A150,150,0,0,0,-26.96498785883433,147.55639406604146Z" stroke="none"></path>
                <path d="M-82.60261371330205,411.7970473518855A420,420,0,0,1,-89.6787844847143,410.31416696641634L-32.028137315969396,146.54077391657725A150,150,0,0,0,-29.500933469036447,147.0703740542448Z" stroke="none"></path>
                <path d="M-89.6787844847143,410.31416696641634A420,420,0,0,1,-96.72838149685705,408.70970163797006L-34.54585053459181,145.9677505849893A150,150,0,0,0,-32.028137315969396,146.54077391657725Z" stroke="none"></path>
                <path d="M-96.72838149685705,408.70970163797006A420,420,0,0,1,-103.74931580199302,406.9841268042506L-37.05332707214036,145.35147385866094A150,150,0,0,0,-34.54585053459181,145.9677505849893Z" stroke="none"></path>
                <path d="M-103.74931580199302,406.9841268042506A420,420,0,0,1,-110.73950694576305,405.1379537903223L-39.54982390920109,144.69212635368652A150,150,0,0,0,-37.05332707214036,145.35147385866094Z" stroke="none"></path>
                <path d="M-124.61938409486585,401.0860370392072A420,420,0,0,1,-131.50495719304706,398.88149397240136L-46.966056140373944,142.45767641871475A150,150,0,0,0,-44.50692289102352,143.2450132282883Z" stroke="none"></path>
                <path d="M-131.50495719304706,398.88149397240136A420,420,0,0,1,-138.35156253430253,396.5587537103638L-49.41127233367948,141.62812632512993A150,150,0,0,0,-46.966056140373944,142.45767641871475Z" stroke="none"></path>
                <path d="M-138.35156253430253,396.5587537103638A420,420,0,0,1,-145.157171321708,394.11850453116296L-51.84184690061,140.75660876112963A150,150,0,0,0,-49.41127233367948,141.62812632512993Z" stroke="none"></path>
                <path d="M-145.157171321708,394.11850453116296A420,420,0,0,1,-151.91976690650233,391.5614695332956L-54.257059609465124,139.843381976177A150,150,0,0,0,-51.84184690061,140.75660876112963Z" stroke="none"></path>
                <path d="M-151.91976690650233,391.5614695332956A420,420,0,0,1,-158.63734538566518,388.88840642141696L-56.65619478059471,138.88871657907748A150,150,0,0,0,-54.257059609465124,139.843381976177Z" stroke="none"></path>
                <path d="M-171.92950270256108,383.1973983477054A420,420,0,0,1,-178.50014278721267,380.1811397543869L-63.7500509954331,135.7789784837096A150,150,0,0,0,-61.40339382234324,136.85621369560909Z" stroke="none"></path>
                <path d="M-178.50014278721267,380.1811397543869A420,420,0,0,1,-185.01788942720785,377.0522252843782L-66.07781765257423,134.66150903013508A150,150,0,0,0,-63.7500509954331,135.7789784837096Z" stroke="none"></path>
                <path d="M-185.01788942720785,377.0522252843782A420,420,0,0,1,-191.48081127355263,373.8115821025643L-68.3860040262688,133.50413646520153A150,150,0,0,0,-66.07781765257423,134.66150903013508Z" stroke="none"></path>
                <path d="M-191.48081127355263,373.8115821025643A420,420,0,0,1,-197.88699322302273,370.4601704814586L-70.67392615107954,132.30720374337807A150,150,0,0,0,-68.3860040262688,133.50413646520153Z" stroke="none"></path>
                <path d="M-197.88699322302273,370.4601704814586A420,420,0,0,1,-204.23453698564975,366.998983516654L-72.94090606630348,131.07106554166214A150,150,0,0,0,-70.67392615107954,132.30720374337807Z" stroke="none"></path>
                <path d="M-216.74620422665814,359.75141827842157A420,420,0,0,1,-222.90662022801212,355.96718761498903L-79.60950722429004,127.13113843392465A150,150,0,0,0,-77.4093586523779,128.48264938515055Z" stroke="none"></path>
                <path d="M-222.90662022801212,355.96718761498903A420,420,0,0,1,-229.0009841870735,352.07747619146517L-81.78606578109768,125.74195578266612A150,150,0,0,0,-79.60950722429004,127.13113843392465Z" stroke="none"></path>
                <path d="M-229.0009841870735,352.07747619146517A420,420,0,0,1,-235.02749021227422,348.0834366132915L-83.9383893615265,124.31551307617555A150,150,0,0,0,-81.78606578109768,125.74195578266612Z" stroke="none"></path>
                <path d="M-235.02749021227422,348.0834366132915A420,420,0,0,1,-240.9843525198164,343.98625240059357L-86.06584018564872,122.85223300021198A150,150,0,0,0,-83.9383893615265,124.31551307617555Z" stroke="none"></path>
                <path d="M-240.9843525198164,343.98625240059357A420,420,0,0,1,-246.86980596283868,339.78713763747794L-88.16778784387095,121.35254915624212A150,150,0,0,0,-86.06584018564872,122.85223300021198Z" stroke="none"></path>
                <path d="M-258.41953198459754,331.08812344882074A420,420,0,0,1,-264.08038213025054,326.5908017289233L-94.3144221893752,116.63957204604402A150,150,0,0,0,-92.29268999449913,118.24575837457884Z" stroke="none"></path>
                <path d="M-264.08038213025054,326.5908017289233A420,420,0,0,1,-269.6629795593567,321.99670410606683L-96.30820698548455,114.99882289502386A150,150,0,0,0,-94.3144221893752,116.63957204604402Z" stroke="none"></path>
                <path d="M-269.6629795593567,321.99670410606683A420,420,0,0,1,-275.1656700278158,317.3071919105258L-98.27345358136277,113.32399711090206A150,150,0,0,0,-96.30820698548455,114.99882289502386Z" stroke="none"></path>
                <path d="M-275.1656700278158,317.3071919105258A420,420,0,0,1,-280.58682296968414,312.5236547459714L-100.20957963203006,111.61559098070407A150,150,0,0,0,-98.27345358136277,113.32399711090206Z" stroke="none"></path>
                <path d="M-280.58682296968414,312.5236547459714A420,420,0,0,1,-285.9248319803469,307.64751007770303L-102.11601142155246,109.8741107420368A150,150,0,0,0,-100.20957963203006,111.61559098070407Z" stroke="none"></path>
                <path d="M-296.3451162450147,297.6232048710731A420,420,0,0,1,-301.424303743904,292.4780147506864L-107.65153705139429,104.45643383953085A150,150,0,0,0,-105.83754151607668,106.29400173966896Z" stroke="none"></path>
                <path d="M-301.424303743904,292.4780147506864A420,420,0,0,1,-306.4141727163247,287.2461570823365L-109.43363311297311,102.5879132436916A150,150,0,0,0,-107.65153705139429,104.45643383953085Z" stroke="none"></path>
                <path d="M-306.4141727163247,287.2461570823365A420,420,0,0,1,-311.3132445564101,281.92918217836336L-111.18330162728932,100.68899363512976A150,150,0,0,0,-109.43363311297311,102.5879132436916Z" stroke="none"></path>
                <path d="M-311.3132445564101,281.92918217836336A420,420,0,0,1,-316.1200675634435,276.52866557318055L-112.90002412980125,98.76023770470734A150,150,0,0,0,-111.18330162728932,100.68899363512976Z" stroke="none"></path>
                <path d="M-316.1200675634435,276.52866557318055A420,420,0,0,1,-320.833217372028,271.046207556411L-114.58329191858144,96.8022169844325A150,150,0,0,0,-112.90002412980125,98.76023770470734Z" stroke="none"></path>
                <path d="M-329.9729391330601,259.8419893702514A420,420,0,0,1,-334.3968027886985,254.1235492525167L-119.42742956739232,90.75841044732739A150,150,0,0,0,-117.84747826180718,92.80071048937549Z" stroke="none"></path>
                <path d="M-334.3968027886985,254.1235492525167A420,420,0,0,1,-338.7215774547968,248.32980684270285L-120.97199194814169,88.68921672953674A150,150,0,0,0,-119.42742956739232,90.75841044732739Z" stroke="none"></path>
                <path d="M-338.7215774547968,248.32980684270285A420,420,0,0,1,-342.94598160728464,242.46247895172567L-122.48070771688737,86.59374248275917A150,150,0,0,0,-120.97199194814169,88.68921672953674Z" stroke="none"></path>
                <path d="M-342.94598160728464,242.46247895172567A420,420,0,0,1,-347.068763464042,236.52330419546587L-123.95312980858643,84.47260864123781A150,150,0,0,0,-122.48070771688737,86.59374248275917Z" stroke="none"></path>
                <path d="M-347.068763464042,236.52330419546587A420,420,0,0,1,-351.0887013558273,230.51404247958234L-125.38882191279548,82.32644374270798A150,150,0,0,0,-123.95312980858643,84.47260864123781Z" stroke="none"></path>
                <path d="M-358.8153112949273,218.29240110531654A420,420,0,0,1,-362.5196937809628,212.0836429830385L-129.47131920748672,75.74415820822803A150,150,0,0,0,-128.14832546247405,77.96157182332733Z" stroke="none"></path>
                <path d="M-362.5196937809628,212.0836429830385A420,420,0,0,1,-366.11665385791514,205.81203990020492L-130.75594780639827,73.5042999643589A150,150,0,0,0,-129.47131920748672,75.74415820822803Z" stroke="none"></path>
                <path d="M-366.11665385791514,205.81203990020492A420,420,0,0,1,-369.60512566888497,199.47945026816106L-132.00183059603035,71.24266081005752A150,150,0,0,0,-130.75594780639827,73.5042999643589Z" stroke="none"></path>
                <path d="M-369.60512566888497,199.47945026816106A420,420,0,0,1,-372.9840755043871,193.0877505698839L-133.20859839442394,68.95991091781568A150,150,0,0,0,-132.00183059603035,71.24266081005752Z" stroke="none"></path>
                <path d="M-372.9840755043871,193.0877505698839A420,420,0,0,1,-376.2525021086617,186.6388348039376L-134.37589361023632,66.656726715692A150,150,0,0,0,-133.20859839442394,68.95991091781568Z" stroke="none"></path>
                <path d="M-382.4539446395708,173.57701526881985A420,420,0,0,1,-385.38512294494524,166.96798199867376L-137.637543908909,59.631422142383485A150,150,0,0,0,-136.59069451413242,61.99179116743566Z" stroke="none"></path>
                <path d="M-385.38512294494524,166.96798199867376A420,420,0,0,1,-388.20210332109906,160.30947251199694L-138.64360832896395,57.2533830399989A150,150,0,0,0,-137.637543908909,59.631422142383485Z" stroke="none"></path>
                <path d="M-388.20210332109906,160.30947251199694A420,420,0,0,1,-390.90405103595134,153.60345986885304L-139.6085896556969,54.85837852459037A150,150,0,0,0,-138.64360832896395,57.2533830399989Z" stroke="none"></path>
                <path d="M-390.90405103595134,153.60345986885304A420,420,0,0,1,-393.4901654440813,146.85193120551585L-140.53220194431475,52.44711828768423A150,150,0,0,0,-139.6085896556969,54.85837852459037Z" stroke="none"></path>
                <path d="M-393.4901654440813,146.85193120551585A420,420,0,0,1,-395.95968022397665,140.05688714563854L-141.4141715085631,50.020316837728046A150,150,0,0,0,-140.53220194431475,52.44711828768423Z" stroke="none"></path>
                <path d="M-400.5460185847871,126.34431920698054A420,420,0,0,1,-402.6614831346645,119.43085865802149L-143.80767254809447,42.653878092150535A150,150,0,0,0,-143.05214949456683,45.12297114535019Z" stroke="none"></path>
                <path d="M-402.6614831346645,119.43085865802149A420,420,0,0,1,-404.6576303969424,112.48200816811342L-144.5205822846223,40.17214577432622A150,150,0,0,0,-143.80767254809447,42.653878092150535Z" stroke="none"></path>
                <path d="M-404.6576303969424,112.48200816811342A420,420,0,0,1,-406.53386887010697,105.49982683162419L-145.19066745360962,37.678509582722924A150,150,0,0,0,-144.5205822846223,40.17214577432622Z" stroke="none"></path>
                <path d="M-406.53386887010697,105.49982683162419A420,420,0,0,1,-408.2896425842057,98.4863836195724L-145.81772949435918,35.17370843556157A150,150,0,0,0,-145.19066745360962,37.678509582722924Z" stroke="none"></path>
                <path d="M-408.2896425842057,98.4863836195724A420,420,0,0,1,-409.92443126559465,91.4437567665435L-146.40158259485523,32.658484559479824A150,150,0,0,0,-145.81772949435918,35.17370843556157Z" stroke="none"></path>
                <path d="M-412.8291518315925,77.27930769622552A420,420,0,0,1,-414.09822298480873,70.16168271089016L-147.89222249457455,25.057743825317917A150,150,0,0,0,-147.43898279699732,27.59975274865197Z" stroke="none"></path>
                <path d="M-414.09822298480873,70.16168271089016A420,420,0,0,1,-415.244587897583,63.023267304754064L-148.30163853485107,22.50830975169788A150,150,0,0,0,-147.89222249457455,25.057743825317917Z" stroke="none"></path>
                <path d="M-415.244587897583,63.023267304754064A420,420,0,0,1,-416.26790687725094,55.86617674436244L-148.66710959901818,19.952205980129442A150,150,0,0,0,-148.30163853485107,22.50830975169788Z" stroke="none"></path>
                <path d="M-416.26790687725094,55.86617674436244A420,420,0,0,1,-417.167876692314,48.69253183011025L-148.98852739011215,17.39018993932509A150,150,0,0,0,-148.66710959901818,19.952205980129442Z" stroke="none"></path>
                <path d="M-417.167876692314,48.69253183011025A420,420,0,0,1,-417.9442306622929,41.504458267806264L-149.2657966651046,14.823020809930808A150,150,0,0,0,-148.98852739011215,17.39018993932509Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M-18.06933786190277,419.6111283429366A420,420,0,0,1,-418.59673873675143,34.304086038777584L-149.4988352631255,12.251459299563422A150,150,0,0,0,-6.453334950679561,149.86111726533449Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-18.06933786190277,419.6111283429366A420,420,0,0,1,-418.59673873675143,34.304086038777584L-149.4988352631255,12.251459299563422A150,150,0,0,0,-6.453334950679561,149.86111726533449Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder start of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M-419.342876885337,-23.485135842253293A420,420,0,0,1,-418.87648870542534,-30.69995455719231L-149.59874596622333,-10.964269484711538A150,150,0,0,0,-149.76531317333465,-8.387548515090462Z" stroke="none"></path>
                <path d="M-418.87648870542534,-30.69995455719231A420,420,0,0,1,-418.2859783818152,-37.90567621303712L-149.38784942207687,-13.537741504656115A150,150,0,0,0,-149.59874596622333,-10.964269484711538Z" stroke="none"></path>
                <path d="M-418.2859783818152,-37.90567621303712A420,420,0,0,1,-417.5715208954598,-45.100165598948145L-149.13268603409279,-16.107201999624337A150,150,0,0,0,-149.38784942207687,-13.537741504656115Z" stroke="none"></path>
                <path d="M-417.5715208954598,-45.100165598948145A420,420,0,0,1,-416.7333279555316,-52.281290832451276L-148.83333141268986,-18.671889583018313A150,150,0,0,0,-149.13268603409279,-16.107201999624337Z" stroke="none"></path>
                <path d="M-416.7333279555316,-52.281290832451276A420,420,0,0,1,-415.7716479366883,-59.44692399115809L-148.48987426310296,-21.23104428255646A150,150,0,0,0,-148.83333141268986,-18.671889583018313Z" stroke="none"></path>
                <path d="M-413.4790030358788,-73.72322597699969A420,420,0,0,1,-412.14871751407594,-80.82966442774861L-147.1959705407414,-28.8677372956245A150,150,0,0,0,-147.67107251281385,-26.329723563214174Z" stroke="none"></path>
                <path d="M-412.14871751407594,-80.82966442774861A420,420,0,0,1,-410.6963034323759,-87.91215130448018L-146.67725122584855,-31.397196894457206A150,150,0,0,0,-147.1959705407414,-28.8677372956245Z" stroke="none"></path>
                <path d="M-410.6963034323759,-87.91215130448018A420,420,0,0,1,-409.12219117241665,-94.968587913481L-146.11506827586308,-33.91735282624321A150,150,0,0,0,-146.67725122584855,-31.397196894457206Z" stroke="none"></path>
                <path d="M-409.12219117241665,-94.968587913481A420,420,0,0,1,-407.426847177633,-101.9968832802927L-145.5095882777261,-36.42745831439025A150,150,0,0,0,-146.11506827586308,-33.91735282624321Z" stroke="none"></path>
                <path d="M-407.426847177633,-101.9968832802927A420,420,0,0,1,-405.6107738150391,-108.99495476931578L-144.86099064822824,-38.92676956046992A150,150,0,0,0,-145.5095882777261,-36.42745831439025Z" stroke="none"></path>
                <path d="M-401.6186271686004,-122.89214096600615A420,420,0,0,1,-399.44373684396453,-129.78713763747785L-142.65847744427305,-46.35254915624209A150,150,0,0,0,-143.43522398878585,-43.890050345002194Z" stroke="none"></path>
                <path d="M-399.44373684396453,-129.78713763747785A420,420,0,0,1,-397.15048271939986,-136.64367557903176L-141.83945811407136,-48.801312706797056A150,150,0,0,0,-142.65847744427305,-46.35254915624209Z" stroke="none"></path>
                <path d="M-397.15048271939986,-136.64367557903176A420,420,0,0,1,-394.7395443355961,-143.4597230504992L-140.97840869128433,-51.235615375178284A150,150,0,0,0,-141.83945811407136,-48.801312706797056Z" stroke="none"></path>
                <path d="M-394.7395443355961,-143.4597230504992A420,420,0,0,1,-392.2116361056286,-150.2332603099127L-140.0755843234388,-53.654735824968824A150,150,0,0,0,-140.97840869128433,-51.235615375178284Z" stroke="none"></path>
                <path d="M-392.2116361056286,-150.2332603099127A420,420,0,0,1,-389.5675071032627,-156.96228021199676L-139.13125253687954,-56.057957218570266A150,150,0,0,0,-140.0755843234388,-53.654735824968824Z" stroke="none"></path>
                <path d="M-383.9337550378403,-170.27880591119856A420,420,0,0,1,-380.94580137710716,-176.86236573435747L-136.0520719203954,-63.16513061941338A150,150,0,0,0,-137.1191982278001,-60.81385925399949Z" stroke="none"></path>
                <path d="M-380.94580137710716,-176.86236573435747A420,420,0,0,1,-377.8449652539424,-183.3935174215465L-134.94463044783657,-65.49768479340946A150,150,0,0,0,-136.0520719203954,-63.16513061941338Z" stroke="none"></path>
                <path d="M-377.8449652539424,-183.3935174215465A420,420,0,0,1,-374.6321655130103,-189.87032565156792L-133.79720196893226,-67.81083058984568A150,150,0,0,0,-134.94463044783657,-65.49768479340946Z" stroke="none"></path>
                <path d="M-374.6321655130103,-189.87032565156792A420,420,0,0,1,-371.30835417621273,-196.2908712063609L-132.61012649150456,-70.10388257370032A150,150,0,0,0,-133.79720196893226,-67.81083058984568Z" stroke="none"></path>
                <path d="M-371.30835417621273,-196.2908712063609A420,420,0,0,1,-367.874516160582,-202.65325153971176L-131.38375577163643,-72.37616126418277A150,150,0,0,0,-132.61012649150456,-70.10388257370032Z" stroke="none"></path>
                <path d="M-360.6808624758373,-215.1959930939379A420,420,0,0,1,-356.92317844156184,-221.37263762979612L-127.47256372912922,-79.06165629635575A150,150,0,0,0,-128.81459374137046,-76.85571181926353Z" stroke="none"></path>
                <path d="M-356.92317844156184,-221.37263762979612A420,420,0,0,1,-353.0597303664809,-227.48368467551214L-126.09276084517175,-81.24417309839718A150,150,0,0,0,-127.47256372912922,-79.06165629635575Z" stroke="none"></path>
                <path d="M-353.0597303664809,-227.48368467551214A420,420,0,0,1,-349.0916630736395,-233.5273233959584L-124.67559395487125,-83.40261549855657A150,150,0,0,0,-126.09276084517175,-81.24417309839718Z" stroke="none"></path>
                <path d="M-349.0916630736395,-233.5273233959584A420,420,0,0,1,-345.02015238701404,-239.50176293055043L-123.22148299536217,-85.53634390376801A150,150,0,0,0,-124.67559395487125,-83.40261549855657Z" stroke="none"></path>
                <path d="M-345.02015238701404,-239.50176293055043A420,420,0,0,1,-340.8464047830916,-245.40523292391475L-121.73085885110414,-87.64472604425526A150,150,0,0,0,-123.22148299536217,-85.53634390376801Z" stroke="none"></path>
                <path d="M-332.1971758378465,-256.99228853286417A420,420,0,0,1,-327.72425744972566,-262.6724406538035L-117.0443776606163,-93.81158594778695A150,150,0,0,0,-118.6418485135166,-91.78296019030863Z" stroke="none"></path>
                <path d="M-327.72425744972566,-262.6724406538035A420,420,0,0,1,-323.154227291254,-268.2747572616413L-115.41222403259071,-95.81241330772903A150,150,0,0,0,-117.0443776606163,-93.81158594778695Z" stroke="none"></path>
                <path d="M-323.154227291254,-268.2747572616413A420,420,0,0,1,-318.48843956099626,-273.7975782690592L-113.74587127178438,-97.78484938180686A150,150,0,0,0,-115.41222403259071,-95.81241330772903Z" stroke="none"></path>
                <path d="M-318.48843956099626,-273.7975782690592A420,420,0,0,1,-313.7282768325534,-279.23926714500016L-112.04581315448335,-99.7283096946429A150,150,0,0,0,-113.74587127178438,-97.78484938180686Z" stroke="none"></path>
                <path d="M-313.7282768325534,-279.23926714500016A420,420,0,0,1,-308.875149644874,-284.5982113996093L-110.31255344459785,-101.6422183570033A150,150,0,0,0,-112.04581315448335,-99.7283096946429Z" stroke="none"></path>
                <path d="M-298.89578135834546,-295.0615391510458A420,420,0,0,1,-293.7724973616918,-300.16282213804357L-104.91874905774706,-107.20100790644415A150,150,0,0,0,-106.74849334226624,-105.37912112537349Z" stroke="none"></path>
                <path d="M-293.7724973616918,-300.16282213804357A420,420,0,0,1,-288.56216223394006,-305.1751604027976L-103.05791508355003,-108.99112871528486A150,150,0,0,0,-104.91874905774706,-107.20100790644415Z" stroke="none"></path>
                <path d="M-288.56216223394006,-305.1751604027976A420,420,0,0,1,-283.2663199098372,-310.0970686813047L-101.16654282494186,-110.74895310046594A150,150,0,0,0,-103.05791508355003,-108.99112871528486Z" stroke="none"></path>
                <path d="M-283.2663199098372,-310.0970686813047A420,420,0,0,1,-277.88653966175684,-314.92708850591885L-99.24519273634174,-112.4739601806853A150,150,0,0,0,-101.16654282494186,-110.74895310046594Z" stroke="none"></path>
                <path d="M-277.88653966175684,-314.92708850591885A420,420,0,0,1,-272.4244156346923,-319.6637886375252L-97.29443415524726,-114.16563879911615A150,150,0,0,0,-99.24519273634174,-112.4739601806853Z" stroke="none"></path>
                <path d="M-261.25963434516456,-328.85164354436625A420,420,0,0,1,-255.56028544835306,-333.3000757599018L-91.27153051726894,-119.03574134282208A150,150,0,0,0,-93.30701226613019,-117.44701555155937Z" stroke="none"></path>
                <path d="M-255.56028544835306,-333.3000757599018A420,420,0,0,1,-249.78520852352057,-337.64974396978494L-89.20900304411448,-120.5891942749232A150,150,0,0,0,-91.27153051726894,-119.03574134282208Z" stroke="none"></path>
                <path d="M-249.78520852352057,-337.64974396978494A420,420,0,0,1,-243.93611485059654,-341.89935927345135L-87.12004101807018,-122.10691402623263A150,150,0,0,0,-89.20900304411448,-120.5891942749232Z" stroke="none"></path>
                <path d="M-243.93611485059654,-341.89935927345135A420,420,0,0,1,-238.0147376422694,-346.04766241817276L-85.00526344366764,-123.58845086363313A150,150,0,0,0,-87.12004101807018,-122.10691402623263Z" stroke="none"></path>
                <path d="M-238.0147376422694,-346.04766241817276A420,420,0,0,1,-232.02283153040014,-350.0934241721994L-82.86529697514291,-125.0333657757855A150,150,0,0,0,-85.00526344366764,-123.58845086363313Z" stroke="none"></path>
                <path d="M-219.83455509353107,-357.8725588625499A420,420,0,0,1,-213.64179641788405,-361.6036266733775L-76.30064157781572,-129.1441523833491A150,150,0,0,0,-78.51234110483253,-127.8116281651964Z" stroke="none"></path>
                <path d="M-213.64179641788405,-361.6036266733775A420,420,0,0,1,-207.38573106719048,-365.22754352557655L-74.06633252399659,-130.43840840199164A150,150,0,0,0,-76.30064157781572,-129.1441523833491Z" stroke="none"></path>
                <path d="M-207.38573106719048,-365.22754352557655A420,420,0,0,1,-201.0682128486314,-368.7432355743729L-71.81007601736835,-131.69401270513316A150,150,0,0,0,-74.06633252399659,-130.43840840199164Z" stroke="none"></path>
                <path d="M-201.0682128486314,-368.7432355743729A420,420,0,0,1,-194.69111377919748,-372.1496610443379L-69.53254063542768,-132.91059323012067A150,150,0,0,0,-71.81007601736835,-131.69401270513316Z" stroke="none"></path>
                <path d="M-194.69111377919748,-372.1496610443379A420,420,0,0,1,-188.25632353097245,-375.4458105380879L-67.23440126106159,-134.08778947788855A150,150,0,0,0,-69.53254063542768,-132.91059323012067Z" stroke="none"></path>
                <path d="M-175.2213130971731,-381.7034076825912A420,420,0,0,1,-168.6249554665086,-384.66300107226067L-60.22319838089592,-137.3796432400931A150,150,0,0,0,-62.579040391847535,-136.32264560092545Z" stroke="none"></path>
                <path d="M-168.6249554665086,-384.66300107226067A420,420,0,0,1,-161.9786306223151,-387.5086105130047L-57.84951093654111,-138.39593232607314A150,150,0,0,0,-60.22319838089592,-137.3796432400931Z" stroke="none"></path>
                <path d="M-161.9786306223151,-387.5086105130047A420,420,0,0,1,-155.2843080140827,-390.2393927893332L-55.45868143360097,-139.37121171047613A150,150,0,0,0,-57.84951093654111,-138.39593232607314Z" stroke="none"></path>
                <path d="M-155.2843080140827,-390.2393927893332A420,420,0,0,1,-148.54397131407623,-392.8545387115222L-53.0514183264558,-140.30519239697222A150,150,0,0,0,-55.45868143360097,-139.37121171047613Z" stroke="none"></path>
                <path d="M-148.54397131407623,-392.8545387115222A420,420,0,0,1,-141.75961782952763,-395.35327335539574L-50.628434939117014,-141.19759762692703A150,150,0,0,0,-53.0514183264558,-140.30519239697222Z" stroke="none"></path>
                <path d="M-128.06691435564153,-399.9985818067669A420,420,0,0,1,-121.16262180985575,-402.1437791091165L-43.27236493209134,-143.6227782532559A150,150,0,0,0,-45.7381836984434,-142.85663635955962Z" stroke="none"></path>
                <path d="M-121.16262180985575,-402.1437791091165A420,420,0,0,1,-114.22242616432453,-404.1698125307424L-40.7937236301159,-144.34636161812227A150,150,0,0,0,-43.27236493209134,-143.6227782532559Z" stroke="none"></path>
                <path d="M-114.22242616432453,-404.1698125307424A420,420,0,0,1,-107.2483839487986,-406.07608171421657L-38.302994267428076,-145.0271720407916A150,150,0,0,0,-40.7937236301159,-144.34636161812227Z" stroke="none"></path>
                <path d="M-107.2483839487986,-406.07608171421657A420,420,0,0,1,-100.24256172249896,-407.8620217908392L-35.80091490089249,-145.66500778244256A150,150,0,0,0,-38.302994267428076,-145.0271720407916Z" stroke="none"></path>
                <path d="M-100.24256172249896,-407.8620217908392A420,420,0,0,1,-93.20703546174964,-409.5271035480218L-33.288226950624875,-146.25967983857922A150,150,0,0,0,-35.80091490089249,-145.66500778244256Z" stroke="none"></path>
                <path d="M-79.05521813416279,-412.4927544645602A420,420,0,0,1,-71.94312055622066,-413.7924448375455L-25.693971627221664,-147.7830160134091A150,150,0,0,0,-28.234006476486712,-147.31884088020007Z" stroke="none"></path>
                <path d="M-71.94312055622066,-413.7924448375455A420,420,0,0,1,-64.809704678998,-414.96951957875297L-23.146323099642142,-148.20339984955464A150,150,0,0,0,-25.693971627221664,-147.7830160134091Z" stroke="none"></path>
                <path d="M-64.809704678998,-414.96951957875297A420,420,0,0,1,-57.65708428757135,-416.02362989553353L-20.591815816989765,-148.57986781983342A150,150,0,0,0,-23.146323099642142,-148.20339984955464Z" stroke="none"></path>
                <path d="M-57.65708428757135,-416.02362989553353A420,420,0,0,1,-50.48737885772813,-416.95446343225086L-18.031206734902902,-148.91230836866103A150,150,0,0,0,-20.591815816989765,-148.57986781983342Z" stroke="none"></path>
                <path d="M-50.48737885772813,-416.95446343225086A420,420,0,0,1,-43.30271292792286,-417.76174436283884L-15.465254617115308,-149.20062298672815A150,150,0,0,0,-18.031206734902902,-148.91230836866103Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M-419.68500472066705,-16.263357974713102A420,420,0,0,1,-36.10521546972759,-418.4452334725353L-12.894719810616996,-149.44472624019116A150,150,0,0,0,-149.88750168595251,-5.808342133826108Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-419.68500472066705,-16.263357974713102A420,420,0,0,1,-36.10521546972759,-418.4452334725353L-12.894719810616996,-149.44472624019116A150,150,0,0,0,-149.88750168595251,-5.808342133826108Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.63636363636364" height="57.27272727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.63636363636364" height="57.27272727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09090909090909" style="font-size: 60px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainderLabel last day of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel last day of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel last day of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel last day of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel start of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.90909090909091px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;
